--- a/index.html
+++ b/index.html
@@ -868,6 +868,49 @@
       </div>
     </section><!-- End Contact Section -->
 
+<!-- ======= Testimonials Section ======= -->
+<section id="testimonials" class="testimonials">
+  <div class="container">
+      <div class="section-header">
+          <span>Avis D'utilisateurs</span>
+          <h2>Ce que disent les utilisateurs</h2>
+      </div>
+
+      <div class="row">
+          <div class="col-lg-4 col-md-6">
+              <div class="testimonial-item">
+                  <img src="image1.jpg" class="testimonial-img" alt="Person 1">
+                  <h3>Jean Dupont</h3>
+                  <p>
+                    "J'utilise Certified Verification Online depuis quelques mois maintenant, et cela a été un véritable changement. Le processus est tellement simple et efficace. Je le recommande vivement !"
+                  </p>
+              </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+              <div class="testimonial-item">
+                  <img src="image2.jpg" class="testimonial-img" alt="Person 2">
+                  <h3>Philipe Caslin</h3>
+                  <p>
+                      "Merci pour les services"
+                  </p>
+              </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+              <div class="testimonial-item">
+                  <img src="image3.jpg" class="testimonial-img" alt="Person 3">
+                  <h3>Mike Walker</h3>
+                  <p>
+                      "The app is cool"
+                  </p>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
