--- a/index_backup.html
+++ b/index_backup.html
@@ -2,7 +2,7 @@
 <head>
 <title>ONLINE VERIFICATION </title>
 
-<style>
+<link rel="stylesheet" href="modal-styles.css">
     /* Modal Styles */
    /* Modal Base Styles */
 .modal {
@@ -181,6 +181,7 @@
 
 <link rel="stylesheet" href="./css/bootstrap.min.css" onerror="this.onerror=null;this.href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css';">
 <link rel="stylesheet" href="./yonkio.css">
+<link rel="stylesheet" href="./patati.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" crossorigin="anonymous">
 
 <!-- Page Loader -->
@@ -230,6 +231,7 @@
 
 <!-- Custom CSS -->
 <link rel="stylesheet" href="./yonkio.css">
+<link rel="stylesheet" href="./patati.css">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" crossorigin="anonymous">
 
@@ -408,6 +410,8 @@
         <h1>ONLINE VERIFICATION </h1>
       </a>
 
+      <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
+      <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar" style="animation: fadeIn 2s ease-out;">
         <ul>
           <li><a href="" class="active nav-link">Accueil</a></li>
@@ -419,10 +423,6 @@
       </nav><!-- .navbar -->
 
     </div>
-    
-    <!-- Mobile Navigation Toggle (Outside container) -->
-    <button class="mobile-nav-toggle mobile-nav-show" onclick="testButton()">☰</button>
-    <button class="mobile-nav-toggle mobile-nav-hide d-none" onclick="testButton()">✕</button>
   </header><!-- End Header -->
   <!-- End Header -->
 
@@ -957,6 +957,9 @@
 
 
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+<!-- Mobile Navigation Overlay -->
+<div class="mobile-nav-overlay"></div>
 
 <div id="preloader"></div>
 
